--- a/index.html
+++ b/index.html
@@ -19,11 +19,28 @@
         <h3><b>If you join your family, your kinship will become more intense.
             Kindness Stay intact.</b></h3>
            <p>Hey Everyone This is APON Closest to you, we dreamed to you be closest to world, that's why we working hard to learning and mastering web development. I will not stop until I become the Web Development Hero. However, don't forget to give your opinion.</p>
-           <a class="read-more" target="_blank"href="https://www.linkedin.com/company/apon-co"><span class="r-btn">Read More</span></a> 
+           <a class="read-more" target="_blank"href="https://www.linkedin.com/company/apon-co">Read More</a> 
            
         </div>      
-    </div>  
-    <div class="hulf-width"><img src="images/big-cup.png" alt="big-cup" srcset="">
+    
+    <div class="hulf-width"><img src="images/big-cup.png" alt="big-cup" srcset=""></div>  
+    </section>
+    <section class="dream-big">
+        <div class="hulf-width">
+        <img src="/images/business-man.png" alt="">
+        </div>
+
+        <div class="hulf-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web Developer </h2>
+            <p>How to become a Web Developer in five steps:
+                Learn web development fundamentals.
+                Choose a development specialization.
+                Learn key programming languages for web development.
+                Work on projects to develop your Web Developer skills.
+                Build a web development portfolio.</p>
+                <a class="read-more" target="_blank"href="https://www.linkedin.com/company/apon-co">Read More</a> 
+        </div>
     </section>
 
 </body>
