--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.png">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="hulf-width">
         <h1>Welcom To</h1>
         <h1><span class="blue-color">APON Closest</span> World!</h1>
@@ -26,7 +26,7 @@
     
     <div class="hulf-width"><img src="images/big-cup.png" alt="big-cup" srcset=""></div>  
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="hulf-width">
         <img src="/images/business-man.png" alt="">
         </div>
@@ -41,6 +41,21 @@
                 Work on projects to develop your Web Developer skills.
                 Build a web development portfolio.</p>
                 <a class="read-more" target="_blank"href="https://www.linkedin.com/company/apon-co">Read More</a> 
+        </div>
+    </section>
+    <section class="Experiences-aria">
+        <h1>Experiences</h1>
+        <div class="flexible-container" >
+            <div class="hulf-width">
+                <h1>Full Stack Web Developer</h1>  
+                <h2>2021-Present | Pro Level Developer</h2>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+              </div>
+              <div class="hulf-width">
+                  <h1>Baby Web Developer</h1>
+                  <h2>2020-2021 | Programming Hero Learner</h2>
+                  <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+              </div>
         </div>
     </section>
 
