--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <section class="dream-big flexible-container">
         <div class="hulf-width">
-        <img src="/images/business-man.png" alt="">
+        <img src="/images/business-man.png" alt="business man photo">
         </div>
 
         <div class="hulf-width">
@@ -46,18 +46,18 @@
     <section class="Experiences-aria">
         <h1>Experiences</h1>
         <div class="flexible-container" >
-            <div class="hulf-width">
-                <h1>Full Stack Web Developer</h1>  
-                <h2>2021-Present | Pro Level Developer</h2>
+            <div id="full-tack-exp" class="Experiences-item">
+                <h2 >Full Stack Web Developer</h2>  
+                <h3 class="blue-color">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
               </div>
-              <div class="hulf-width">
-                  <h1>Baby Web Developer</h1>
-                  <h2>2020-2021 | Programming Hero Learner</h2>
+              <div id="web-dev-exp" class="Experiences-item">
+                  <h2>Baby Web Developer</h2>
+                  <h3 class="blue-color">2020-2021 | Programming Hero Learner</h3>
                   <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
               </div>
         </div>
     </section>
-
+<footer><p>© APON 2021, a Programming Hero Student.</p></footer>
 </body>
 </html> 
