--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
     <section class="top-banner flexible-container">
@@ -28,7 +28,7 @@
     </section>
     <section class="dream-big flexible-container">
         <div class="hulf-width">
-        <img src="/images/business-man.png" alt="business man photo">
+        <img src="images/business-man.png" alt="business man photo">
         </div>
 
         <div class="hulf-width">
